# frap

./: .gitignore  CHANGELOG.md  CONTEXT.md  Frap.en.md  Frap.md  LICENSE  NOTICE  README.md  README.ru.md  SONATYPE_VERIFICATION.txt  idea.md
.cursor/hooks/: pre-push.sh
.cursor/rules/: core.mdc  rust.mdc  typescript.mdc
.cursor/skills/subtask-minimal-context/: SKILL.md
.github/workflows/: build-native-binaries.yml  ci.yml  lint.yml  publish-maven.yml  publish.yml
adapters/playwright/: README.md  package.json
adapters/playwright-java/: README.md  pom.xml
adapters/playwright/src/: config.ts  debug-chrome.ts  debug-explorer.ts  debug-manifest.ts  debug-report-styles.ts  debug-status.ts  debug-viewer.ts  healing-events.ts  index.ts  reporter.ts  selector-engine.ts  wrapper.ts
crates/: Cargo.toml
crates/clustering/: Cargo.toml
crates/clustering/src/: lib.rs
crates/context/: Cargo.toml
crates/context/src/: correlation.rs  lib.rs  logs.rs  network.rs  timeline.rs
crates/core/: Cargo.toml  README.md  cbindgen.toml
crates/core/src/: element_map.rs  error.rs  ffi.rs  lib.rs  page_object.rs  wasm.rs
crates/core/tests/: contract_clustering_id_migration.rs  contract_element_map_list.rs
crates/core/tests/fixtures/: heal_request.json
crates/healing/: Cargo.toml
crates/healing/src/: lib.rs
crates/rca/: Cargo.toml
crates/rca/src/: aggregate.rs  classifier.rs  lib.rs  mcp.rs  report.rs  rules.rs
crates/rca/tests/fixtures/: analyze_response.json
crates/signature/: Cargo.toml
crates/signature/src/: lib.rs
docs/: README.md  audience.md  benchmark.md  brand.md  cases.md  clustering.md  features.md  glossary.md  index.md  integrations-selenium-java.md  integrations.md  messaging.md  monetization.md  pains.md  positioning.md  publishing-npm.md  roadmap.md  strategy.md  structural-contract.md  talk-topics.md
docs/en/: integrations.md  java-api-reference.md  java-getting-started.md  java-maven-central.md  java-sdk-rpc.md  quickstart.md
docs/ru/: integrations.md  quickstart.md
e2e/: cp001-happy-path.spec.ts  cp002-refactor-heal.spec.ts  cp003-safe-fail.spec.ts  debug-mode.spec.ts  package.json  playwright.conference.config.ts  playwright.config.ts  playwright.context.config.ts  results.json  tsconfig.json
e2e/conference/: README.md  cfp.spec.ts  clustering-id-migration.spec.ts  dbg-single.spec.ts  helpers.ts  navigation.spec.ts  registration.spec.ts  schedule.spec.ts  speakers.spec.ts  verify-reports.mjs  zzz-reporting.spec.ts
e2e/context/: README.md  c002-payment-timeout.spec.ts  c003-flaky-cart.spec.ts  c004-websocket.spec.ts  generate-rca.mjs  helpers.ts  overhead.spec.ts  verify-context.mjs  verify-rca.mjs  verify-reports.mjs
e2e/fletta-reports/: fletta-debug.html  fletta-debug.json  fletta-report.json  junit.xml
e2e/test-results/: .last-run.json
e2e/test-results/cp001-happy-path-CP001-Hap-2ecd5--should-not-trigger-healing-chromium/: error-context.md
examples/: README.md
examples/java-playwright-demo/: README.md  pom.xml
examples/java/playwright/: DEMO_SERVER.md  DEMO_SERVER.ru.md  README.md  README.ru.md  SHOWCASE.md  SHOWCASE.ru.md  pom.xml
examples/typescript/playwright/: README.md  package.json  playwright.config.ts
fixtures/: README.md
fixtures/fixtureconf/: README.md  index.html
internal/: CONTEXT.md  README.md
internal/architecture/: README.md  enhancements.md  extension-points.md  platform-agnostic-core.md
internal/demo/: README.md  index.html
internal/docs/: README.md  audience.md  benchmark.md  brand.md  cases.md  features.md  glossary.md  index.md  integrations-selenium-java.md  integrations.md  messaging.md  monetization.md  pains.md  positioning.md  publishing-npm.md  roadmap.md  strategy.md  talk-topics.md
internal/palettte/: logos.html  palette-light.html  palette-warm-neutrals-semantic.html  palette-warm-neutrals.html  palette.html
internal/project/: FEATURES.md  OVERVIEW.md  conventions.md
internal/testing/: README.md  package.json  tsconfig.json
palettte/: logos.html  palette-light.html  palette-warm-neutrals-semantic.html  palette-warm-neutrals.html  palette.html
palettte/css/: base.css  palette-warm-neutrals-semantic.css  palette-warm-neutrals.css  theme-dark.css  theme-light.css
project/: FEATURES.md  OVERVIEW.md  README.md  conventions.md  traceability.md
project/architecture/: ADR-001-core-language-strategy.md  README.md  clustering.md  enhancements.md  extension-points.md  platform-agnostic-core.md  sdk-strategy.md
project/cases/: C001-payment-button.md  C002-api-timeout.md  C003-flaky-cart.md  C004-page-object-gen.md  C005-llm-test-generation.md  C006-mobile-self-healing.md  C007-ai-agent-audit.md  C008-multi-agent-a2a.md  C009-recording-cdp.md  C010-structural-regression.md  README.md
project/feature/: F000-core-platform-api.md  F001-self-healing.md  F002-unified-context.md  F003-rca.md  F004-page-object-gen.md  F005-mcp-integration.md  F006-multi-platform.md  F007-visual-fingerprint.md  F008-playwright-adapter.md  F009-feedback-loop.md  F010-test-health.md  F011-ai-agent-testing.md  F012-debug-trace-mode.md  F013-typescript-sdk.md  F014-java-sdk-ui-adapters.md  F015-python-sdk-adapters.md  F017-structural-contract.md  _template.md
project/release/: README.md  RELEASE-POLICY.md  java-sdk-1.0.0-matrix.md
promo/: README.md  README.ru.md
promo/presentation/: README.md  README.ru.md  index.html  index.ru.html
scripts/: bench-context.sh  build.sh  clean-build.sh  debug-clustering.sh  dev.sh  run-java-e2e.sh  run-l4-java-demo.sh  setup-hooks.sh  setup.sh  smoke-frap-core-rpc.sh  start.sh  stop.sh  test.sh  verify-clustering.js
sdk/java/: IMPLEMENTATION_STATUS.md  MAVEN_RELEASE_CHECKLIST.md  README.md  VERIFICATION.md  pom.xml
sdk/typescript/: .npmignore  .npmrc.example  README.md  jest.config.js  package.json  tsconfig.json
test-app/: cp001-stable.html  cp002-refactored.html  cp003-ambiguous.html  index.html  server.js
test-app/conference/: cfp.html  conference.css  index.html  schedule-heal.html  schedule-v1.html  schedule-v2.html  talk.html
test-app/context/: cart.html
(+229 files in other folders)
