[workspace]
members = ["signature", "clustering", "healing", "core", "context"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["fletta team"]
license = "Apache-2.0"
repository = "https://github.com/fletta/fletta"

[workspace.dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.19"
