[package]
name = "frap-clustering"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Drain3-based DOM clustering algorithm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
frap-signature = { path = "../signature", version = "0.1.0" }

[dev-dependencies]
serde_json = { workspace = true }
