[package]
name = "fletta-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Fletta Core — public API aggregation (signature, clustering, healing)"

[lib]
name = "fletta_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
signature = { path = "../signature" }
clustering = { path = "../clustering" }
healing = { path = "../healing" }

[dev-dependencies]
serde_json = { workspace = true }
