[package]
name = "frap-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Frap SDK — deterministic DOM binding for stable selectors (signature, clustering, healing)"
keywords = ["testing", "playwright", "selenium", "dom", "selectors", "self-healing"]
categories = ["development-tools::testing", "web-programming"]
readme = "README.md"

[lib]
name = "frap_sdk"
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:getrandom"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
frap-signature = { path = "../signature", version = "0.1.0" }
frap-clustering = { path = "../clustering", version = "0.1.0" }
frap-healing = { path = "../healing", version = "0.1.0" }
frap-rca = { path = "../rca", version = "0.1.0" }
wasm-bindgen = { workspace = true, optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }

[dev-dependencies]
serde_json = { workspace = true }
