[package]
name = "frap-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Fletta Core — public API aggregation (signature, clustering, healing)"

[lib]
name = "frap_core"
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:getrandom"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
signature = { path = "../signature" }
clustering = { path = "../clustering" }
healing = { path = "../healing" }
frap-rca = { path = "../rca" }
wasm-bindgen = { workspace = true, optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }

[dev-dependencies]
serde_json = { workspace = true }
