[package]
name = "frap-healing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Self-healing selector fallback orchestration"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
frap-signature = { path = "../signature", version = "0.1.0" }
frap-clustering = { path = "../clustering", version = "0.1.0" }

[dev-dependencies]
serde_json = { workspace = true }
