[package]
name = "fletta-rca"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Fletta root cause analysis — classify test failures from unified context timelines"

[lib]
name = "fletta_rca"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
fletta-context = { path = "../context" }

[dev-dependencies]
serde_json = { workspace = true }
