[package]
name = "frap-rca"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Frap root cause analysis — classify test failures from unified context timelines"

[lib]
name = "frap_rca"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
frap-context = { path = "../context" }

[dev-dependencies]
serde_json = { workspace = true }
